DT-1496: Prevent update self from updating institution id (#2477)